update example project

--- a/en/code/Skateboarding/index.html
+++ b/en/code/Skateboarding/index.html
@@ -70,7 +70,7 @@
                 </div>
     
                 <div class="card-face flipme ycenter gradient1 rounded">
-                  <p class="bigfont">Healflip<br><span class="bounceme">🏆</span></p>
+                  <p class="bigfont">Heelflip<br><span class="bounceme">🏆</span></p>
                 </div>
               </div>        
             </div> 
@@ -82,7 +82,7 @@
                   </div>
       
                   <div class="card-face flipme ycenter gradient1 rounded">
-                    <p class="bigfont">Grind<br><span class="bounceme">🚀</span></p>
+                    <p class="bigfont">Tailside<br><span class="bounceme">🚀</span></p>
                   </div>
                 </div>        
               </div> 
