updated html file

--- a/en/code/Mood-lamp/index.html
+++ b/en/code/Mood-lamp/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 
 <!-- This part is for extra information the browser needs to load the page correctly-->
 <head>
   
-  <meta charset="utf-8">
-  <html lang="en">
-    
-  <!-- Don't shrink the page on mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
   <!-- Appears on the web browser tab and search results -->
   <title>Top 5 Emoji!</title> 
@@ -20,6 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Truculenta:opsz,wght@12..72,100&display=swap" rel="stylesheet">
+  
   <!-- Include CSS style file -->
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="default.css" rel="stylesheet" type="text/css" />
