--- a/en/code/Your-makerspace/index.html
+++ b/en/code/Your-makerspace/index.html
@@ -50,7 +50,7 @@
         <p>If you're really lucky (turns out, <u>you are!</u>) your makerspace contains some really cool tools and materials to make nearly <strong>anything</strong>! Not all makerspaces have fancy tools, you just need a safe designated place to make some things (and pull others apart!)</p>
       </section>
             
-      <section class="xcenter">
+      <section class="wrap">
     <blockquote>
         <p>"Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world."</p>
         <cite>- Albert Einstein.</cite>
