--- a/en/code/Skateboarding/index.html
+++ b/en/code/Skateboarding/index.html
@@ -82,7 +82,7 @@
                   </div>
       
                   <div class="card-face flipme ycenter gradient1 rounded">
-                    <p class="bigfont">Tailside<br><span class="bounceme">🚀</span></p>
+                    <p class="bigfont">Tailslide<br><span class="bounceme">🚀</span></p>
                   </div>
                 </div>        
               </div> 
