--- a/en/code/Night-sky/index.html
+++ b/en/code/Night-sky/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- The page header code goes here -->
     <header class="border-bottom secondary">
-      <h1><span class="bigfont spinme">⭐</span>Explore the night sky<span class="bigfont spinme">⭐</span></h1>
+      <h1><span class="bigfont spinme">⭐</span>The night sky<span class="bigfont spinme">⭐</span></h1>
     </header>
 
     <!-- The main content for the web page goes between the main tags -->
