--- a/en/code/Night-sky/index.html
+++ b/en/code/Night-sky/index.html
@@ -39,7 +39,7 @@
     <main class="transparent">
       
       <section class="xcenter">
-        <h2>Why should you look at the night sky?</h2>
+        <h2>Why look at the night sky?</h2>
       </section>
       
       <section class="wrap">
