--- a/en/code/sell-me-something-circus-example/index.html
+++ b/en/code/sell-me-something-circus-example/index.html
@@ -41,7 +41,7 @@
                 <p class="wrap">The greatest show in town!</p>
             </section>
             
-            <section>
+            <section class="xcenter">
                 <h2 class="wrap scaleme">Early tickets on sale!</h2>
                 <p class="wrap">Contact us for early prices!</p>
             </section>
